<resources>
    <string name="app_name">TFS_spring_2024_Shelkovenko</string>
    <string name="user_avatar">User avatar</string>
    <string name="write_message">Write message…</string>
    <string name="write_username">New username…</string>
    <string name="add">Add</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All Streams</string>
    <string name="search_hint">Search…</string>
    <string name="cancel_searching_icon">Cancel searching icon</string>
    <string name="search_icon">Search icon</string>
    <string name="back_button">Back button</string>
    <string name="users_search_hint">Users…</string>
    <string name="close_stream_topic_button">Close stream topic button</string>
    <string name="open_stream_topic_button">Open stream topic button</string>
    <string name="retry">Retry</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="load_topics_error">Cannot load topics, check your internet connection</string>
    <string name="create_stream_error">Cannot create stream, check your internet connection</string>
    <string name="search_error">Search error occurred</string>
    <string name="status_active">Active</string>
    <string name="status_idle">Idle</string>
    <string name="status_offline">Offline</string>
    <string name="send_message_error">Cannot send message, check your internet connection</string>
    <string name="send_reaction_error">Cannot send reaction</string>
    <string name="change_topic_error">Cannot change topic for sending message</string>
    <string name="remove_reaction_error">Cannot remove reaction, check your internet connection</string>
    <string name="load_messages_error">Cannot load messages, check your internet connection</string>
    <string name="process_search_error">Cannot perform search, check your internet connection</string>
    <string name="load_streams_error">Cannot load streams, check your internet connection</string>
    <string name="load_people_error">Cannot load other people info, check your internet connection</string>
    <string name="stream_name_prefix">#%1$s</string>
    <string name="topic_prefix">Topic: %1$s</string>
    <string name="topic_chooser_prefix">#%1$s</string>
    <string name="delete_message_error">Cannot delete message</string>
    <string name="edit_message_error">Cannot edit message</string>
    <string name="own_profile_loading_error">Cannot load own profile info</string>
    <string name="message_copied_info">Message copied to clipboard</string>
    <string name="subscribe_to_stream_error">Cannot subscribed to this stream</string>
    <string name="unsubscribe_from_stream_error">Cannot unsubscribed from this stream</string>
    <string name="email_visible_to">Email visible to:</string>
    <string name="availability_info">Display my availability to other users:</string>
    <string name="loading_settings_error">Cannot load settings</string>
    <string name="changing_username_error">Cannot change name</string>
    <string name="changing_email_visibility_error">Cannot change email visibility</string>
    <string name="changing_availability_error">Cannot change availability</string>
    <string name="loading_another_profile_error">Cannot load another user profile</string>
</resources>