<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screens.channels.ChannelFragment">

    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/write_message_edit_text_background"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp">

            <ImageButton
                android:id="@+id/question_mark_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search_24"
                android:contentDescription="@string/search_icon" />

            <ImageButton
                android:id="@+id/cancel_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close_24"
                android:visibility="gone"
                android:contentDescription="@string/cancel_searching_icon" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/add_stream_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_24"
            android:contentDescription="@string/search_icon" />

    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:tabIndicatorColor="@color/green"
        app:tabTextAppearance="@style/CustomTabTextAppearance"
        app:tabTextColor="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/channelViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_black" >

    </androidx.viewpager2.widget.ViewPager2>

</LinearLayout>