<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black">

    <LinearLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/own_user_avatar_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_launcher_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CutCornersAvatarShape" />

    <TextView
        android:id="@+id/own_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white_0.8"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/own_user_avatar_image"
        tools:text="Some User email" />

    <FrameLayout
        android:id="@+id/edit_name_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/own_user_email">

        <LinearLayout
            android:id="@+id/edit_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/own_user_email">

            <EditText
                android:id="@+id/own_user_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/write_message_edit_text_background"
                android:hint="@string/write_username"
                android:maxLines="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_0.8"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/own_user_avatar_image"
                tools:hint="Some Username" />

            <ImageButton
                android:id="@+id/save_username_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:background="@drawable/green_circle_background"
                android:src="@drawable/ic_done_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/none_edit_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/own_user_email">

            <TextView
                android:id="@+id/own_user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_0.8"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/own_user_avatar_image"
                tools:text="some user name" />

            <ImageView
                android:id="@+id/start_to_edit_username_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:background="@drawable/green_circle_background"
                android:padding="6dp"
                android:src="@drawable/ic_edit_white_24" />

        </LinearLayout>

    </FrameLayout>


    <TextView
        android:id="@+id/email_visibility_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/email_visible_to"
        android:textColor="@color/white_0.8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_holder"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/email_visibility_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/email_visibility_text"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_holder" />

    <TextView
        android:id="@+id/invisible_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/availability_info"
        android:textColor="@color/white_0.8"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_visibility_text" />

    <CheckBox
        android:id="@+id/invisible_mode_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@+id/invisible_mode_text"
        app:layout_constraintTop_toBottomOf="@+id/email_visibility_text" />

    <FrameLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/settings_header">

        <include
            android:id="@+id/error_component"
            layout="@layout/error_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>